--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
-    "material-ui-phone-number": "^3.0.0",
+    "mui-phone-number": "^3.0.3",
     "react": "^18.3.1",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.3.1",
