--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^7.3.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -31,6 +34,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
     "mui-phone-number": "^3.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.3.1",
