--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-#VITE_DARPANET_HOST="https://darpanet.amcspsgtech.in/api"
-VITE_DARPANET_HOST="http://localhost:9198/api"
+VITE_DARPANET_HOST="https://darpanet.axios.psgtech.ac.in/api"
+#VITE_DARPANET_HOST="http://localhost:9198/api"
+#VITE_DARPANET_HOST="http://10.159.251.68:9198/api"
