--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_DARPANET_HOST="https://darpanet.axios.psgtech.ac.in/api"
-# VITE_DARPANET_HOST="http://localhost:9198/api"
+#VITE_DARPANET_HOST="https://darpanet.axios.psgtech.ac.in/api"
+VITE_DARPANET_HOST="http://localhost:9198/api"
 #vITE_DARPANET_HOST="http://10.1.57.222:9198/api"
